feat: :sparkles: Metrics and eventdriven
Creating code for metrics and event driven kafka from service alert to logging

--- a/domains/alert-managment/alert-service/pom.xml
+++ b/domains/alert-managment/alert-service/pom.xml
@@ -23,40 +23,46 @@
     </properties>
 
     <dependencies>
-        <!-- Core web service -->
+        <!-- ✅ Core web service -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- JPA for PostgreSQL -->
+        <!-- ✅ JPA for PostgreSQL -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- PostgreSQL driver -->
+        <!-- ✅ PostgreSQL JDBC driver -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
 
-        <!-- OpenAPI documentation -->
+        <!-- ✅ Kafka messaging -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+
+        <!-- ✅ OpenAPI documentation -->
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.5.0</version>
         </dependency>
 
-        <!-- Unit testing -->
+        <!-- ✅ Unit testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- Cassandra Java driver -->
+        <!-- ✅ Cassandra Java driver -->
         <dependency>
             <groupId>com.datastax.oss</groupId>
             <artifactId>java-driver-core</artifactId>
