--- a/domains/core/language-service/Dockerfile
+++ b/domains/core/language-service/Dockerfile
@@ -1,8 +1,24 @@
-FROM node:20
+# --- Builder Stage ---
+FROM node:20-slim AS builder
 WORKDIR /app
+
+# Install only what’s needed first for cache optimization
 COPY package*.json ./
-RUN npm install
-COPY . .
+RUN npm install --omit=dev
+
+# Copy app source code
+COPY ./src ./src
 COPY .env .env
-# Start the app (adjust if your entry file is src/app.js)
+
+# --- Final Lightweight Image ---
+FROM node:20-alpine AS production
+WORKDIR /app
+
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/src ./src
+COPY --from=builder /app/.env .env
+COPY package*.json ./
+
+# Start the app
 CMD ["node", "src/app.js"]
+EXPOSE 3005
