--- a/domains/alert-managment/alert-service/Dockerfile
+++ b/domains/alert-managment/alert-service/Dockerfile
@@ -1,16 +1,25 @@
 FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
 WORKDIR /app
+
+# Aprovechamos cache para dependencias
 COPY pom.xml .
+RUN mvn dependency:go-offline
+
+# Copiamos todo el código fuente
 COPY src ./src
+
+# Compilamos el proyecto (sin tests)
 RUN mvn clean package -DskipTests
 
+# Imagen final
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
+
+# Copiamos solo el JAR generado
 COPY --from=build /app/target/alert-service-1.0.0.jar app.jar
 
-# Aseguramos que escuche en el puerto 8081 y en 0.0.0.0
-ENV JAVA_OPTS="-Dserver.port=8081 -Dserver.address=0.0.0.0"
-
+# Exponemos el puerto de la aplicación
 EXPOSE 8081
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+# Ejecutamos Spring Boot
+ENTRYPOINT ["java", "-jar", "app.jar"]
