--- a/domains/alert-managment/alert-service/pom.xml
+++ b/domains/alert-managment/alert-service/pom.xml
@@ -29,17 +29,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- ✅ JPA for PostgreSQL -->
+        <!-- ✅ Cassandra for Spring Data -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <artifactId>spring-boot-starter-data-cassandra</artifactId>
         </dependency>
 
-        <!-- ✅ PostgreSQL JDBC driver -->
+        <!-- ✅ Cassandra Java driver (extra) -->
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <groupId>com.datastax.oss</groupId>
+            <artifactId>java-driver-core</artifactId>
         </dependency>
 
         <!-- ✅ Kafka messaging -->
@@ -60,12 +59,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-
-        <!-- ✅ Cassandra Java driver -->
-        <dependency>
-            <groupId>com.datastax.oss</groupId>
-            <artifactId>java-driver-core</artifactId>
         </dependency>
     </dependencies>
 
