--- a/domains/core/auth-service/.env
+++ b/domains/core/auth-service/.env
@@ -1,8 +1,8 @@
 # PostgreSQL Connection
-POSTGRES_HOST=3.215.178.247
+POSTGRES_HOST=44.218.146.40
 POSTGRES_PORT=5432
-POSTGRES_USER=deaslaadmin
-POSTGRES_PASSWORD=securepass1223
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=securepasspg
 POSTGRES_DB=deaslapg
 
 # JWT/Service Settings
