feat: :sparkles: Chnage of language
Change of lagunge for alert-service to C#

--- a/domains/alert-managment/alert-service/Dockerfile
+++ b/domains/alert-managment/alert-service/Dockerfile
@@ -1,25 +1,24 @@
-FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+# ---- Build Stage ----
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+
+# Copy csproj and restore as distinct layers
+COPY *.csproj ./
+RUN dotnet restore
+
+# Copy the rest of the source code
+COPY . ./
+RUN dotnet publish -c Release -o /app/publish
+
+# ---- Runtime Stage ----
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
-# Aprovechamos cache para dependencias
-COPY pom.xml .
-RUN mvn dependency:go-offline
+# Copy published output
+COPY --from=build /app/publish .
 
-# Copiamos todo el código fuente
-COPY src ./src
-
-# Compilamos el proyecto (sin tests)
-RUN mvn clean package -DskipTests
-
-# Imagen final
-FROM eclipse-temurin:17-jre-alpine
-WORKDIR /app
-
-# Copiamos solo el JAR generado
-COPY --from=build /app/target/alert-service-1.0.0.jar app.jar
-
-# Exponemos el puerto de la aplicación
+# Expose the port used in the application
 EXPOSE 8081
 
-# Ejecutamos Spring Boot
-ENTRYPOINT ["java", "-jar", "app.jar"]
+# Run the application
+ENTRYPOINT ["dotnet", "AlertService.dll"]
