--- a/domains/alert-managment/schedule-service/Dockerfile
+++ b/domains/alert-managment/schedule-service/Dockerfile
@@ -1,14 +1,14 @@
-FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-FROM eclipse-temurin:17-jre-alpine
-WORKDIR /app
-COPY --from=build /app/target/schedule-service-1.0.0.jar app.jar
-
-ENV JAVA_OPTS="-Dserver.address=0.0.0.0 -Dserver.port=8084"
-
 EXPOSE 8084
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+COPY . .
+RUN dotnet restore
+RUN dotnet publish -c Release -o /app/publish
+
+FROM base AS final
+WORKDIR /app
+COPY --from=build /app/publish .
+ENTRYPOINT ["dotnet", "ScheduleService.dll"]
