refactor: :fire: Rremovin java code and replace it
Remove code java to replace it with C# now it works

--- a/domains/alert-managment/template-service/Dockerfile
+++ b/domains/alert-managment/template-service/Dockerfile
@@ -1,16 +1,14 @@
-FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
+EXPOSE 4005
 
-FROM eclipse-temurin:17-jre-alpine
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+COPY . .
+RUN dotnet restore
+RUN dotnet publish -c Release -o /app/publish
+
+FROM base AS final
 WORKDIR /app
-COPY --from=build /app/target/template-service-1.0.0.jar app.jar
-
-# Forzar Spring Boot a escuchar en el puerto 8083 y en 0.0.0.0
-ENV JAVA_OPTS="-Dserver.port=8083 -Dserver.address=0.0.0.0"
-
-EXPOSE 8083
-
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+COPY --from=build /app/publish .
+ENTRYPOINT ["dotnet", "TemplateService.dll"]
