--- a/domains/alert-managment/validation-service/Dockerfile
+++ b/domains/alert-managment/validation-service/Dockerfile
@@ -1,16 +1,22 @@
-FROM maven:3.9.6-eclipse-temurin-17-alpine AS build
+# Use the official image as a parent image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
-
-FROM eclipse-temurin:17-jre-alpine
-WORKDIR /app
-COPY --from=build /app/target/validation-service-1.0.0.jar app.jar
-
-# Asegura que Spring Boot escuche en todas las interfaces y el puerto correcto
-ENV JAVA_OPTS="-Dserver.port=8085 -Dserver.address=0.0.0.0"
-
 EXPOSE 8085
 
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+# Use SDK image to build the app
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+WORKDIR /src
+COPY ["ValidationService/ValidationService.csproj", "ValidationService/"]
+RUN dotnet restore "ValidationService/ValidationService.csproj"
+COPY . .
+WORKDIR "/src/ValidationService"
+RUN dotnet build "ValidationService.csproj" -c Release -o /app/build
+
+FROM build AS publish
+RUN dotnet publish "ValidationService.csproj" -c Release -o /app/publish
+
+# Copy the build artifacts from the previous stage to the final image
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
+ENTRYPOINT ["dotnet", "ValidationService.dll"]
