feat: :sparkles: Creating Kafka
Creating Kafka event drive between loggin-service and alert-service tested locally working

--- a/docker-gateway/nginx.conf
+++ b/docker-gateway/nginx.conf
@@ -1,51 +1,36 @@
-worker_processes 1;
-
 events {
-  worker_connections 1024;
+    worker_connections 1024;  # Adjust the number of worker connections based on your needs
 }
 
 http {
-  include       mime.types;
-  default_type  application/json;
-  sendfile      on;
-
-  upstream user_service {
-    server user-service:3000;
-  }
-
-  upstream auth_service {
-    server auth-service:3000;
-  }
-
-  upstream alert_service {
-    server alert-service:3000;
-  }
-
-  server {
-    listen 80;
-
-    location /api/users/ {
-      proxy_pass http://user_service/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+    upstream role_service {
+        server 3.227.13.92:3004;  # Correct IP for the role-service
     }
 
-    location /api/auth/ {
-      proxy_pass http://auth_service/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
+    server {
+        listen 80;
 
-    location /api/alerts/ {
-      proxy_pass http://alert_service/;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
+        # Proxy API requests for role-service
+        location /role-service/ {
+            proxy_pass http://role_service/;  # Correct IP for the role-service
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Expose Swagger UI for role-service
+        location /role-service/api-docs/ {
+            proxy_pass http://role_service/api-docs/;  # Correct IP for Swagger UI
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Optional: Add a default route or health check endpoint
+        location / {
+            return 200 'Nginx API Gateway is up and running!';
+        }
     }
-  }
 }
