--- a/domains/alert-managment/alert-service/AlertService.csproj
+++ b/domains/alert-managment/alert-service/AlertService.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Confluent.Kafka" Version="2.11.0" />
     <PackageReference Include="Microsoft.OpenApi" Version="1.6.23" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="CassandraCSharpDriver" Version="3.19.0" />
